# dotfiles

./: .gitattributes  .gitignore  .gitmodules  Brewfile  CLAUDE.md  LICENSE.txt  README.md  bash_profile  bootstrap.sh  brew-packages  cleanup-nix-remaining.sh  cleanup-nix.sh  converge.sh  git-authors  gitconfig  gitignore.global  indowp  inputrc  install.sh  justfile  mac-packages.txt  mac.sh  macos-defaults.sh  osx  packages.txt  packages.yaml  pryrc  setup.sh  tmux.conf  vimrc.local
.claude/: settings.json
docs/: architecture.md
etc/: pacman.conf
firefox/: userChrome.css
home/: .Xresources  .git-authors  .pam_environment  .profile  .tmux.conf  .vimrc.local  .xinitrc  .xprofile  .zshrc
i3blocks/: .i3blocks.conf
lib/: common.sh  macos.sh  stdout.sh
nix/: flake.nix  home.nix
omf/: bundle  init.fish  theme
osx/: setup-preferences
scripts/: load-state  lpass-rofi.sh  rofi-paste.sh  store-state
state/: aurlist.txt  pkglist.txt  srvclist.txt
x11/: .Xresources  .Xresources-147  .Xresources-192  .Xresources-96  (+4 more)
xdg-configs/tmux/mux/: Cargo.toml
xdg-configs/tmux/mux/scripts/: notch-state.swift
xdg-configs/tmux/mux/src/: chooser.rs  color.rs  filter.rs  group.rs  logging.rs  main.rs  mru.rs  order.rs  palette.rs  picker.rs  process.rs  project.rs  status.rs  tmux.rs  usage_bars.rs
xdg-configs/tmux/mux/src/sidebar/: claude.rs  daemon.rs  hooks.rs  meta.rs  mod.rs  overlay.rs  pi.rs  tree.rs
xdg-configs/tmux/mux/src/sidebar/render/: frame.rs  hints.rs  items.rs  mod.rs  overlays.rs
xdg-configs/tmux/mux/src/usage/: codex.rs  copilot.rs  mod.rs
(+336 files in other folders)
