[package]
name = "mux"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "^0"
crossterm = "^0"
nucleo-matcher = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
chrono = "^0"
tracing = "^0"
tracing-subscriber = { version = "^0", features = ["env-filter"] }
tracing-appender = "^0"
sysinfo = "^0"
rusqlite = { version = "^0.37", features = ["bundled"] }

[dev-dependencies]
tempfile = "^3"

[profile.release]
opt-level = "z"
lto = true
strip = true
